--- a/library.properties
+++ b/library.properties
@@ -3,7 +3,7 @@ version=1.0.0
 author=Luis Llamas
 maintainer=Luis Llamas
 sentence=PetriNet Library
-paragraph=
+paragraph=Arduino library that implements a Petri Net in a MCU like Arduino.
 category=Other
 url=https://www.luisllamas.es
 architectures=*
