--- a/library.properties
+++ b/library.properties
@@ -5,5 +5,5 @@ maintainer=Luis Llamas
 sentence=PetriNet Library
 paragraph=Arduino library that implements a Petri Net in a MCU like Arduino.
 category=Other
-url=https://www.luisllamas.es
+url=https://github.com/luisllamasbinaburo/Arduino-PetriNet
 architectures=*
